syntax = "proto3";

package opentransaction;

service Tenant {
    rpc ID(Empty) returns (TenantID) {}

    rpc Accept(Transaction) returns (Metadata) {}

    rpc AcceptRequest(Transaction) returns (Metadata) {}

    rpc Revert(Transaction) returns (Metadata) {}
}

service Processor {
    rpc Send(Transactions) returns (Metadata) {}
}

message TenantID {
    string ID = 1;
}

message Transaction {
    string ID = 1;

    string origin_tenant = 2;
    string destination_tenant = 3;

    string from_ref = 4;
    string to_ref = 5;

    int64 value = 6;
}

message Transactions {
    repeated Transaction transactions = 1;
}

message Metadata {
    map<string, string> context = 1;
}

message Empty {

}